--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -17,4 +17,7 @@
   <button ion-button secondary menuToggle>Toggle Menu</button>
 
   <button ion-button primary (click)="emailTrigger()">Email</button>
+
 </ion-content>
+
+<style ></style>
